--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "primereact": "^10.6.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^2.30.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/runtime": "7.13.8",
-    "tailwindcss": "^3.4.3",
     "typescript": "4.1.3"
   },
   "scripts": {
